--- a/about-me/index.html
+++ b/about-me/index.html
@@ -8,20 +8,20 @@
 	<meta name="theme-color" content="#494f5c">
 	<meta name="msapplication-TileColor" content="#494f5c">
 <meta itemprop="name" content="">
-<meta itemprop="description" content="Update soon">
+<meta itemprop="description" content="About Me Update soon">
 
-<meta itemprop="wordCount" content="2">
+<meta itemprop="wordCount" content="4">
 
 
 
 <meta itemprop="keywords" content="" /><meta property="og:title" content="" />
-<meta property="og:description" content="Update soon" />
+<meta property="og:description" content="About Me Update soon" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://funkyswing.github.io/about-me/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Update soon"/>
+<meta name="twitter:description" content="About Me Update soon"/>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -68,7 +68,8 @@
 	<main class="site-main section-inner thin animated fadeIn faster">
 		<h1></h1>
 		<div class="content">
-			<p>Update soon</p>
+			<h1 id="about-me">About Me<a href="#about-me" class="anchor" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path><line x1="8" y1="12" x2="16" y2="12"></line></svg></a></h1>
+<p>Update soon</p>
 
 		</div>
 	</main>
