--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</div>
 			<nav id="home-nav" class="site-nav">
 				
-				<a href="https://funkyswing.github.io/posts/">Blog</a>
+				<a href="https://funkyswing.github.io/posts/">Posts</a>
 				<a href="https://funkyswing.github.io/about-me/">About Me</a>
 				<a href="https://funkyswing.github.io/tags/">Tags</a>
 
