--- a/about-me/index.html
+++ b/about-me/index.html
@@ -53,7 +53,7 @@ Values As a fan of opensource, I believe in a free and open internet."/>
 				</div>
 				<nav class="site-nav hide-in-mobile">
 					
-				<a href="https://funkyswing.github.io/posts/">Blog</a>
+				<a href="https://funkyswing.github.io/posts/">Posts</a>
 				<a href="https://funkyswing.github.io/about-me/">About Me</a>
 				<a href="https://funkyswing.github.io/tags/">Tags</a>
 
@@ -66,7 +66,7 @@ Values As a fan of opensource, I believe in a free and open internet."/>
 	</header>
 	<div id="mobile-menu" class="animated fast">
 		<ul>
-			<li><a href="https://funkyswing.github.io/posts/">Blog</a></li>
+			<li><a href="https://funkyswing.github.io/posts/">Posts</a></li>
 			<li><a href="https://funkyswing.github.io/about-me/">About Me</a></li>
 			<li><a href="https://funkyswing.github.io/tags/">Tags</a></li>
 		</ul>
